Enable concurrent GC for tests.